# restfastapi

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/models/pydantic/: __init__.py  base.py
app/routes/: base.py  users.py
app/settings/: globals.py
