[tool.poetry]
name = "fastapi-rest"
version = "0.0.1"
description = "High-performance Async REST API, in Python(FastAPI) and Uvicorn."
authors = ["Shahed Mehbub <shahed739@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
uvicorn = "^0.11.5"
email_validator = "^1.1.0"
psutil = "^5.7.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
bandit = "^1.6.2"
flake8 = "^3.8.1"
rope = "^0.17.0"
watchgod = "^0.6"
taskipy = "^1.2.1"
pre-commit = "^2.4.0"
isort = {version = "^4.3.21", extras = ["pyproject"]}

[tool.taskipy.tasks]
# Launch Commands for Local Development
app = "uvicorn app.main:app --host=0.0.0.0 --port=8888 --log-level=info --reload"

[tool.black]
line-length = 79
target-version = ['py38']
exclude = '''
/(
    \.git
  | .vscode
  | build
  | dist
  | .scripts
  | .git-crypt
  | services/.scripts
  | services/.vscode
  | core/.scripts
  | core/.vscode
)/
'''

[tool.isort]
line_length = 79
multi_line_output = 3
not_skip = "__init__.py"
use_parentheses = true
include_trailing_comma = true
force_grid_wrap = 0
known_third_party = ["fastapi", "pydantic", "starlette"]
